added fallback font

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@ html {
 
 body{
     background-color: var(--body-bg-color);
-    font-family: "Outfit";
+    font-family: "Outfit", sans-serif;
     font-size: 0.94rem;
     min-height: 100%;
 }
